Bug fix image stretched (#154)

--- a/apps/ui/src/components/fightCardWidget/FightCardWidget.scss
+++ b/apps/ui/src/components/fightCardWidget/FightCardWidget.scss
@@ -33,6 +33,7 @@ $fightCardBgBg: #0e0d15;
     width: 4rem;
     height: 4rem;
     border-radius: 4px;
+    object-fit: contain;
   }
 
   .current-fight-title-wrapper {
